outputs/csi300-test/eoh/2025-07-28_13-35-57/evaluations/problem_eval-8809065208273953526_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi300/gpt.py", line 1
    defined as the ratio of the current close to the close 10 days ago, aiming to capture the influence of short-term price trends on future returns.}
                                                                                                                                                     ^
SyntaxError: unmatched '}'
